# DeepcamTest

./: build.gradle  settings.gradle
app/: build.gradle
app/libs/: libuvccamera-release.aar
app/src/androidTest/java/com/deepcam/access/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/deepcam/access/: BaseActivity.java  CameraActivity.java  Constants.java  DrawBaseActivity.java  MainActivity.java  RegisterActivity.java  SelectImageActivity.java
app/src/main/java/com/deepcam/access/app/: DeepcamApp.java
app/src/main/java/com/deepcam/access/database/: DaoMaster.java  DaoSession.java  UserInfoDao.java
app/src/main/java/com/deepcam/access/entity/: UserInfo.java
app/src/main/java/com/deepcam/access/utils/: SharedPreferencesUtils.java
app/src/main/java/com/deepcam/access/view/: CameraPreview.java
app/src/main/res/drawable/: edit_right_background.xml  text_button_background.xml  text_left_background.xml  text_right_background.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_register.xml  activity_select_image.xml  drawer_header.xml
app/src/main/res/menu/: drawer.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-zh/: strings-zh.xml
app/src/test/java/com/deepcam/access/: ExampleUnitTest.java
facelibray/: CMakeLists.txt  build.gradle  proguard-rules.pro
facelibray/src/androidTest/java/com/deepcam/facelibray/: ExampleInstrumentedTest.java
facelibray/src/main/: AndroidManifest.xml
facelibray/src/main/assets/: deepcam_mt_model.pb
facelibray/src/main/cpp/: SafeUtil.cpp  SafeUtil.h  native-lib.cpp  yuv2rgb.cpp
facelibray/src/main/java/com/deepcam/deblocks/: ErrorMessage.java  FaceManager.java  SDKManager.java
facelibray/src/main/java/com/deepcam/deblocks/jnis/: FaceInfo.java  NativeClass.java
facelibray/src/main/java/com/deepcam/deblocks/listeners/: InitListener.java  OnRegisterListener.java
facelibray/src/main/java/com/deepcam/deblocks/utils/: FaceUtil.java  PackageUtils.java  YUVUtils.java
facelibray/src/main/res/values/: strings.xml
facelibray/src/test/java/com/deepcam/facelibray/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
